samples/_failures_safe/1761250526_870e2f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_114622a0.c: In function ‘main’:
./samples/SAFE/__tmp_114622a0.c:150:12: error: missing terminating " character
  150 |     printf("Enter
      |            ^~~~~~
./samples/SAFE/__tmp_114622a0.c:150:5: error: expected expression at end of input
  150 |     printf("Enter
      |     ^~~~~~
./samples/SAFE/__tmp_114622a0.c:150:5: error: expected declaration or statement at end of input
